Fix "libkcal stores illegal negative DTSTART in ics / ical files". Thanks for figuring out how to fix this Stephan.

BUG: 189711

svn path=/trunk/KDE/kdepimlibs/; revision=954583